# nequip-extension-template

./: README.md  pyproject.toml
nequip_extension_template/: _keys.py
nequip_extension_template/model/: README.md
nequip_extension_template/nn/: README.md
nequip_extension_template/train/: README.md
