[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nequip-extension-template"
dynamic = ["version"]
description = "TODO"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "your name here"},
]

dependencies = [
    "nequip>=0.7.0"
]

[tool.setuptools.packages.find]
include = ["nequip-extension-template", "nequip_extension_template", "nequip_extension_template.*"]

[tool.setuptools.dynamic]
version = {attr = "nequip_extension_template._version.__version__"}

[tool.flake8]
max-line-length = 127
select = ["E", "F", "W", "C"]
ignore = ["E226", "E501", "E741", "E743", "C901", "W503", "E203"]
exclude = [
    ".eggs",
    "*.egg",
    "build",
    "dist",
    "docs",
    ".git",
    "__pycache__",
    "examples",
    "tmp"
]

[project.entry-points."nequip.extension"]
init_always = "nequip_extension_template"
